# RAG_APPLICATION_WITH_SEMANTIC

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  clear_alembic_version.py  compose.yaml  main.py  pyproject.toml  wait-and-run.sh
alembic/: env.py
alembic/versions/: 7e371c380541_initial_migration.py  a774ba58bd85_add_rag_mode_and_document_pages.py
comman_exception/: comman_exception.py
constant/: email_subject.py  http_message.py  subscription.py
db_configuration/: config.py  init.sql  init_sql.py  pgdb_config.py
encryption_and_jwt/: jwt_handler.py  pass_hashing.py
key/: private_key.pem  public_key.pem
middleware/: middleware.py
model/: subscription_request.py  subscription_response.py  user_info.py
prompts/: document_summary.prompt
router/: chat_router.py  conversation_router.py  document_router.py  otp_router.py  search_router.py  subscription_router.py  subscription_transaction_router.py  userrouter.py
schema/: __init__.py  chat_message.py  chat_session.py  document_metadata.py  document_page.py  documents_chunks.py  subscription.py  subscription_request.py  user_detailed.py  user_otp.py
service/: chat_services.py  conversation_service.py  document_service.py  notification_service.py  otpservice.py  page_index_rag.py  rag_service.py  search_service.py  subscription_service.py  subscription_transaction_service.py  user_service.py
templeate/: mail.html
utils/: db_calling.py  document_utils.py  embedding_utils.py  helper.py  otp_generator.py  prompt_loader.py  rag_utils.py  security.py  semantic_search.py
(+89 files in other folders)
